--- a/templates/includes/inc_menu.html
+++ b/templates/includes/inc_menu.html
@@ -11,6 +11,13 @@
                     <a class="nav-link" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/categories/">Категории</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/products/">Товары</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="/contacts/">Контакты</a>
                 </li>
                 <li class="nav-item">
