--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,17 @@
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
-    <h1 class="pt-5">Мы торгово-производственная компания</h1>
-    <p><h3><b>{{ name_company }}</b></h3></p>
-    <hr>
-    <div>
+    <div class="clearfix pt-3">
+    <h5>Список категорий</h5>
     </div>
+    <div class="d-flex">
+        {% for item in context.categories %}
+            <ul>
+                <li><a href="#" class="text-uppercase text-decoration-none">{{ item.name }}</a></li>
+            </ul>
+        {% endfor %}
+    </div>
+    <hr>
     <p><h2 class="pt-3 pb-5">Наша продукция:</h2></p>
     {% include 'includes/inc_goods_block.html' %}
 {% endblock %}
