Lesson_6 bugs fix

--- a/templates/includes/inc_menu.html
+++ b/templates/includes/inc_menu.html
@@ -11,10 +11,13 @@
                     <a class="nav-link" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/buyers/">Покупатели</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/categories/">Категории</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/products/">Товары</a>
+                    <a class="nav-link" href="/products/list/">Товары</a>
                 </li>
 
                 <li class="nav-item">
