--- a/templates/includes/inc_menu.html
+++ b/templates/includes/inc_menu.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="/categories/">Категории</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/products/list/">Товары</a>
+                    <a class="nav-link" href="/products/">Товары</a>
                 </li>
 
                 <li class="nav-item">
